# areyougoing

./: .gitignore  CNAME  Cargo.toml  LICENSE.md  README.md  areyougoing_client.js  areyougoing_client_bg.wasm  index.html  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
client/: Cargo.toml  index.html
client/src/: app.rs  lib.rs  main.rs  misc.rs  new_poll.rs  participation.rs  poll.rs  results_ui.rs  retrieve.rs  time.rs  toggle_switch.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  main.rs
