cargo-features = ["per-package-target"]

[package]
name = "areyougoing_client"
version = "0.1.0"
authors = ["Sam Carey <sam@samcarey.com>"]
edition = "2021"
default-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
enum-iterator = "=1.1"
areyougoing_shared = { path = "../shared" }
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
serde = { version = "1", features = ["derive"] }
futures-lite = "1.11"
serde_json = "1.0"
gloo = "0.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3", features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'History',
] }
url = "2.2"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4"
