cargo-features = ["per-package-target"]

[package]
name = "areyougoing_client"
version = "0.1.0"
authors = ["Sam Carey <sam@samcarey.com>"]
edition = "2021"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
eframe = { version = "0.20", features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
enum-iterator = "=1.1"
areyougoing_shared = { path = "../shared" }
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
serde = { version = "1", features = ["derive"] }
futures-lite = "1.11"
serde_json = "1.0"
gloo = "0.8"
egui_extras = { version = "0.20", features = ["datepicker"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3", features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'History',
] }
url = "2.2"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
anyhow = "1.0"
