[package]
name = "areyougoing_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
headers = "0.3"
anyhow = "1.0"

exitfailure = "0.5"
failure = "0.1"
rand = "0.8"
structopt = "0.3"

linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
axum-client-ip = "0.2"
local-ip-address = "0.4"
askama = "0.11"
thiserror = "1.0"


areyougoing_shared = { path = "../shared" }
