[package]
name = "areyougoing_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
enum-as-inner = "0.5"
strum = { version = "0.24", features = ["derive"] }
anyhow = "1.0"
